--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0"
   },
