--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.1.1",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
