--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
+    "npm": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-scroll": "^1.9.2",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
   },
