--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.1",
     "react-scroll": "^1.9.2",
     "react-simple-typewriter": "^5.0.1",
