--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "framer-motion": "^12.11.0",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
